# MLOps_Assignment_2

./: README.md
codes/: MLOps_test.ipynb
codes/task1/: EDA.py  data_preparation.py
codes/task2/: model_selection_hyperparameter_tuning.py
codes/task3/: xAI.py
codes/task4/: Dockerfile  Makefile  README.md  pyproject.toml
codes/task4/assignment2/: __init__.py  views.py
codes/task4/assignment2/model/: titanic_model.pkl
codes/task4/assignment2/templates/: index.html
data/: titanic_EDA.html
model/: StandardScaler.joblib  best_model.joblib
